--- a/examples/plaintext_sample_code/RoboMasterEP/stream/decoder/src/pybind11/tests/CMakeLists.txt
+++ b/examples/plaintext_sample_code/RoboMasterEP/stream/decoder/src/pybind11/tests/CMakeLists.txt
@@ -5,7 +5,10 @@
 # All rights reserved. Use of this source code is governed by a
 # BSD-style license that can be found in the LICENSE file.
 
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.5)
+
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+include_directories(${Python3_INCLUDE_DIRS})
 
 option(PYBIND11_WERROR  "Report all warnings as errors"  OFF)
 
